<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PingPongGameActivity">

<!--<android.support.v4.widget.SwipeRefreshLayout-->
    <!--android:layout_height="match_parent"-->
    <!--android:layout_width="match_parent">-->

<!--</android.support.v4.widget.SwipeRefreshLayout>-->

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="140dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_ping_pong_svgrepo_com_2" />

    <TextView
        android:id="@+id/teamATV"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/team_a"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/teamBTV"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/team_b"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/teamBScooreTV"
        android:layout_width="83dp"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/teamBTV"
        app:layout_constraintStart_toStartOf="@+id/teamBTV"
        app:layout_constraintTop_toBottomOf="@+id/teamBTV" />

    <TextView
        android:id="@+id/resultTV"
        android:layout_width="299dp"
        android:layout_height="47dp"
        android:layout_marginBottom="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:textColor="@android:color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/resetB"
        app:layout_constraintEnd_toEndOf="@+id/resetB"
        app:layout_constraintStart_toStartOf="@+id/resetB" />

    <TextView
        android:id="@+id/teamAScooreTV"
        android:layout_width="83dp"
        android:layout_height="69dp"
        android:layout_marginTop="52dp"
        android:layout_weight="1"
        android:gravity="center"
        android:text="0"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/teamATV"
        app:layout_constraintStart_toStartOf="@+id/teamATV"
        app:layout_constraintTop_toBottomOf="@+id/teamATV" />

    <Button
        android:id="@+id/pointToAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/point_to_a"
        app:layout_constraintEnd_toEndOf="@+id/teamAScooreTV"
        app:layout_constraintStart_toStartOf="@+id/teamAScooreTV"
        app:layout_constraintTop_toBottomOf="@+id/teamAScooreTV" />

    <Button
        android:id="@+id/pointToBB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/point_to_b"
        app:layout_constraintEnd_toEndOf="@+id/teamBScooreTV"
        app:layout_constraintStart_toStartOf="@+id/teamBScooreTV"
        app:layout_constraintTop_toBottomOf="@+id/teamBScooreTV" />

    <Button
        android:id="@+id/resetB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="20dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>